Add GitHub Pages deployment configuration
- Add GitHub Actions workflow for automated deployment to GitHub Pages
- Configure Angular build for GitHub Pages with proper base href
- Add build:gh-pages script to package.json
- Set up deployment to trigger on master branch pushes

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -50,6 +50,22 @@
               ],
               "outputHashing": "all"
             },
+            "gh-pages": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kB",
+                  "maximumError": "1MB"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "4kB",
+                  "maximumError": "8kB"
+                }
+              ],
+              "outputHashing": "all",
+              "baseHref": "/solana-transcendence-dao-prototype/"
+            },
             "development": {
               "optimization": false,
               "extractLicenses": false,
