Fix Angular baseHref configuration for GitHub Pages
- Add baseHref to default build options
- Add deployUrl to gh-pages configuration to ensure correct asset paths
- This should fix the issue where the app loads but assets aren't found

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -32,7 +32,8 @@
             ],
             "styles": [
               "src/styles.scss"
-            ]
+            ],
+            "baseHref": "/"
           },
           "configurations": {
             "production": {
@@ -64,7 +65,8 @@
                 }
               ],
               "outputHashing": "all",
-              "baseHref": "/solana-transcendence-dao-prototype/"
+              "baseHref": "/solana-transcendence-dao-prototype/",
+              "deployUrl": "/solana-transcendence-dao-prototype/"
             },
             "development": {
               "optimization": false,
