feat: Enhanced Solana data operations and organized documentation
- Added comprehensive DataOperationsService for Solana blockchain interactions
- Enhanced SolanaService with additional imports and capabilities
- Organized all documentation files into dedicated documentation/ folder
- Added .gitignore to exclude documentation from version control
- Updated Angular dependencies and configuration
- Added smart contracts IDL for frontend integration
- Enhanced activity and dashboard components
- Added proper polyfills for browser compatibility

Key Features:
- Registration operations for user profiles and activities
- Fetching operations for blockchain data
- Approval/verification operations for activities
- Deletion operations with proper authorization
- Real-time subscription capabilities
- Batch operations for efficiency
- Comprehensive error handling
- TypeScript interfaces for type safety

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -22,6 +22,7 @@
           "builder": "@angular/build:application",
           "options": {
             "browser": "src/main.ts",
+            "polyfills": ["src/polyfills.ts"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -33,7 +34,30 @@
             "styles": [
               "src/styles.scss"
             ],
-            "baseHref": "/"
+            "baseHref": "/",
+            "define": {
+              "global": "globalThis",
+              "process": "globalThis.process",
+              "Buffer": "globalThis.Buffer"
+            },
+            "allowedCommonJsDependencies": [
+              "buffer",
+              "process",
+              "util",
+              "assert",
+              "stream-browserify",
+              "crypto-browserify",
+              "bn.js",
+              "bs58",
+              "borsh",
+              "@solana/buffer-layout",
+              "jayson",
+              "base64-js",
+              "camelcase",
+              "js-sha256",
+              "@coral-xyz/borsh",
+              "eventemitter3"
+            ]
           },
           "configurations": {
             "production": {
