--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,13 +28,17 @@
     "@angular/material": "^20.0.5",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
-    "@project-serum/anchor": "^0.26.0",
-    "@solana/web3.js": "^1.98.2",
+    "@project-serum/anchor": "^0.25.0",
+    "@solana/web3.js": "^1.87.6",
+    "assert": "^2.1.0",
     "bn.js": "^5.2.2",
     "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "process": "^0.11.10",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "stream-browserify": "^3.0.0",
+    "tslib": "^2.3.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@angular/build": "^20.0.4",
